code refactor, optimizations, fixes