@@ -1,13 +1,19 @@
 package com.dopadream.brainierbees.util;
 
+import com.dopadream.brainierbees.BrainierBees;
 import com.dopadream.brainierbees.registry.ModMemoryTypes;
 import com.google.common.collect.Lists;
+import net.fabricmc.loader.api.FabricLoader;
+import net.minecraft.client.Minecraft;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.GlobalPos;
+import net.minecraft.world.entity.ai.memory.MemoryModuleType;
 import net.minecraft.world.entity.animal.Bee;
+import net.minecraft.world.entity.animal.sniffer.Sniffer;
 
-import java.util.LinkedList;
-import java.util.List;
+import java.util.*;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public interface HiveAccessor {
 
@@ -28,23 +34,32 @@ public interface HiveAccessor {
     }
 
     default void blacklistTarget(Bee bee, BlockPos blockPos) {
-        if (bee.getBrain().getMemory(ModMemoryTypes.HIVE_BLACKLIST).isEmpty()) {
-            LinkedList<GlobalPos> list = Lists.newLinkedList();
+        if (!bee.getBrain().hasMemoryValue(ModMemoryTypes.HIVE_BLACKLIST)) {
+            List<GlobalPos> list = new ArrayList<>();
             list.add(GlobalPos.of(bee.level().dimension(), blockPos));
-            bee.getBrain().setMemory(ModMemoryTypes.HIVE_BLACKLIST, list);
+            bee.getBrain().setMemory(ModMemoryTypes.HIVE_BLACKLIST, list.stream().limit(10).collect(Collectors.toList()));
         } else {
-            bee.getBrain().getMemory(ModMemoryTypes.HIVE_BLACKLIST).get().add(GlobalPos.of(bee.level().dimension(), blockPos));
-            while(bee.getBrain().getMemory(ModMemoryTypes.HIVE_BLACKLIST).get().size() > 3) {
-                bee.getBrain().getMemory(ModMemoryTypes.HIVE_BLACKLIST).get().removeFirst();
+            if (!bee.getBrain().getMemory(ModMemoryTypes.HIVE_BLACKLIST).get().contains(GlobalPos.of(bee.level().dimension(), blockPos))) {
+                bee.getBrain().getMemory(ModMemoryTypes.HIVE_BLACKLIST).get().add(GlobalPos.of(bee.level().dimension(), blockPos));
+            }
+            while(bee.getBrain().getMemory(ModMemoryTypes.HIVE_BLACKLIST).get().size() > 9) {
+                bee.getBrain().getMemory(ModMemoryTypes.HIVE_BLACKLIST).get().remove(0);
+            }
+        }
+
+        if (FabricLoader.getInstance().isDevelopmentEnvironment()) {
+            if (bee.getBrain().hasMemoryValue(ModMemoryTypes.HIVE_BLACKLIST)) {
+                BrainierBees.LOGGER.info((bee.getUUID() + " Hive Blacklist: " + bee.getBrain().getMemory(ModMemoryTypes.HIVE_BLACKLIST).get()));
+                BrainierBees.LOGGER.info(bee.getUUID() + " Hive Blacklist Size: " + bee.getBrain().getMemory(ModMemoryTypes.HIVE_BLACKLIST).get().size());
             }
         }
     }
+
     default void removeMemorizedHive(Bee bee) {
-        if (bee.getBrain().getMemory(ModMemoryTypes.HIVE_BLACKLIST).isPresent()) {
-            bee.getBrain().eraseMemory(ModMemoryTypes.HIVE_POS);
-            ((HiveAccessor)bee).brainier_bees$setMemorizedHome(null);
-        } else {
-            ((HiveAccessor)bee).blacklistTarget(bee, bee.getBrain().getMemory(ModMemoryTypes.HIVE_POS).get().pos());
-        }
+        ((HiveAccessor)bee).blacklistTarget(bee, bee.getBrain().getMemory(ModMemoryTypes.HIVE_POS).get().pos());
+        bee.getBrain().eraseMemory(ModMemoryTypes.HIVE_POS);
+        bee.getBrain().setMemory(ModMemoryTypes.STUCK_TICKS, 0);
+        bee.getBrain().setMemory(ModMemoryTypes.TRAVELLING_TICKS, 0);
+        ((HiveAccessor)bee).brainier_bees$setMemorizedHome(null);
     }
 }
